<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="io.gamereward.sample.TransferFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/transfer_title" />

    <EditText
        android:id="@+id/transfer_toAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/promt_to_address"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/transfer_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/transfer_amount"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/otp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/prompt_otp"
        android:inputType="number" />

    <Button
        android:id="@+id/transfer_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_transfer" />

    <Button
        android:id="@+id/back_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_back" />

    <TextView
        android:id="@+id/message_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorError" />
</LinearLayout>
