<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="io.gamereward.sample.MenuFragment">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/address_qrcode"
            android:layout_width="120dp"
            android:layout_height="120dp" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/address_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/account_balance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/otp_setting_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_otpsetting"
        android:layout_gravity="center"
        />
    <Button
        android:id="@+id/transfer_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_transfer"
        android:layout_gravity="center"
        />
    <Button
        android:id="@+id/transaction_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_transaction"
        android:layout_gravity="center"
        />
    <Button
        android:id="@+id/game1_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_game1"
        android:layout_gravity="center"
        />
    <Button
        android:id="@+id/game2_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_game2"
        android:layout_gravity="center"
        />
</LinearLayout>